@@ -35,3 +35,5 @@ $conf['alt_toolbar'] = '';
 $conf['mfiles'] = 0;
 $conf['extra_plugins'] ="";
 $conf['captcha_auth'] = 'CREATE';
+$conf['htmblock_ok'] = 0;
+
